--- a/SistemaTickets/nbproject/project.properties
+++ b/SistemaTickets/nbproject/project.properties
@@ -37,8 +37,8 @@ jlink.launcher.name=SistemaTickets
 main.class=sistematickets.Main
 manifest.file=manifest.mf
 mkdist.disabled=false
-platform.active=default_platform
-run.jvmargs=--module-path "C:\\Users\\jhonatan - Personal\\Escritorio\\javafx-sdk-24\\lib" --add-modules javafx.controls,javafx.fxml
+platform.active=JDK_24
+run.jvmargs=--module-path "C:\\Users\\betio\\OneDrive\\Escritorio\\javafx-sdk-24\\lib" --add-modules javafx.controls,javafx.fxml
 run.modulepath=\
     ${javac.modulepath}:\
     ${libs.JavaFX24.classpath}
@@ -59,3 +59,7 @@ run.classpath=\
     ${build.classes.dir}
 build.classes.dir=build/classes
 build.generated.sources.dir=build/generated-sources
+dist.javadoc.dir=dist/javadoc
+build.test.classes.dir=build/test/classes
+build.test.results.dir=build/test/results
+build.classes.excludes=
