--- a/SistemaTickets/nbproject/project.properties
+++ b/SistemaTickets/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=SistemaTickets
-application.vendor=betio
+application.vendor=Humberto
 build.generated.sources.dir=${build.dir}/generated-sources
 debug.modulepath=\
     ${run.modulepath}
@@ -13,8 +13,10 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=../../../../Downloads/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar
 includes=**
-jar.compress=false
-javac.deprecation=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
+javac.deprecation=true
 javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
@@ -34,7 +36,24 @@ javadoc.use=false
 javadoc.version=false
 jlink.launcher=false
 jlink.launcher.name=SistemaTickets
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=sistematickets.Main
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 mkdist.disabled=false
 platform.active=JDK_24
